# hyprutils

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  flake.nix  hyprutils.pc.in  prmsg.txt
.github/workflows/: arch.yml  nix.yml
include/hyprutils/animation/: AnimatedVariable.hpp  AnimationConfig.hpp  AnimationManager.hpp  BezierCurve.hpp  Spring.hpp
include/hyprutils/cli/: ArgumentParser.hpp  Logger.hpp
include/hyprutils/debug/: Log.hpp  RollingLogFollow.hpp
include/hyprutils/gfx/: Egl.hpp
include/hyprutils/i18n/: I18nEngine.hpp
include/hyprutils/math/: Box.hpp  Edges.hpp  Mat3x3.hpp  Matrix.hpp  Misc.hpp  Region.hpp  Vector2D.hpp
include/hyprutils/memory/: Atomic.hpp  Casts.hpp  ImplAtomic.hpp  ImplBase.hpp  SharedPtr.hpp  UniquePtr.hpp  WeakPtr.hpp
include/hyprutils/misc/: HyprAssert.hpp
include/hyprutils/os/: File.hpp  FileDescriptor.hpp  Process.hpp
include/hyprutils/path/: Path.hpp
include/hyprutils/signal/: Listener.hpp  Signal.hpp
include/hyprutils/string/: ConstVarList.hpp  Expression.hpp  Numeric.hpp  String.hpp  VarList.hpp  VarList2.hpp
include/hyprutils/utils/: ScopeGuard.hpp
nix/: default.nix  overlays.nix
src/animation/: AnimatedVariable.cpp  AnimationConfig.cpp  AnimationManager.cpp  BezierCurve.cpp  Spring.cpp  Spring.hpp
src/cli/: ArgumentParser.cpp  ArgumentParser.hpp  Logger.cpp  Logger.hpp
src/debug/: Log.cpp
src/gfx/: Egl.cpp
src/i18n/: I18nEngine.cpp  I18nEngine.hpp  I18nLocale.cpp
src/math/: Box.cpp  Mat3x3.cpp  Matrix.cpp  Region.cpp  Vector2D.cpp
src/memory/: Memory.cpp
src/os/: File.cpp  FileDescriptor.cpp  Process.cpp
src/path/: Path.cpp
src/signal/: Listener.cpp  Signal.cpp
src/string/: ConstVarList.cpp  String.cpp  VarList.cpp  VarList2.cpp
src/utils/: ScopeGuard.cpp
tests/: animation.cpp  beziercurve.cpp  expression.cpp  filedescriptor.cpp  i18n.cpp  math.cpp  matrix.cpp  memory.cpp  os.cpp  shared.hpp  signal.cpp  string.cpp
tests/animation/: Animation.cpp  Bezier.cpp
tests/cli/: ArgumentParser.cpp  Logger.cpp
tests/i18n/: Engine.cpp  Locale.cpp
tests/math/: Box.cpp  Mat3x3.cpp  Region.cpp  Vector2D.cpp
tests/memory/: Memory.cpp  WeakPtrMove.cpp
tests/os/: Fd.cpp  Process.cpp
tests/path/: Path.cpp
tests/signal/: Signal.cpp
tests/string/: ConstVarList.cpp  Numeric.cpp  String.cpp  VarList.cpp  VarList2.cpp
